--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,7 +30,7 @@ a{
 .register{
     display: grid;
     margin-top: 30px;
-   gap: 10px;
+    gap: 10px;
     justify-items: center;
 }
 .article{
@@ -55,12 +55,13 @@ a{
 }
 #description
 {
-    border: solid green;width: 30%;margin-left: 340px;   
+    border: solid green;width: 30%;margin-left: 40px;   
 }
 .commentsdiv
 {
   
     width: 300px;
+    border: solid ;
 
   
 }
@@ -73,8 +74,8 @@ a{
     border-radius: 4px;
     row-gap: 10px;
 }
-#title{font-weight: bold;font-size:30px ;border: solid green;width: 30%;margin-left: 340px;}
-#commenttextarea{width:90%;display: flex; align-items:flex-start;}
+#title{padding:5px; font-weight: bold;font-size:30px ;border: solid green;width: 30%;margin-left: 40px;}
+#commenttextarea{padding: 5px; width:90%;display: flex; align-items:flex-start;}
 .Update{
    
  
@@ -83,7 +84,7 @@ a{
  width: 230px;height: 30px;margin-top: -160px;}
 .Update textarea{margin-top: -100px;width: 230px;
    }
- .Update button{}   
+ 
 input{
     width: 200px;
     height: 20px;
@@ -101,4 +102,13 @@ button
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
     background-color: rgb(77, 169, 162);
+}
+.popup{
+    width: 500px;
+    border-radius: 15px;
+    background-color: aqua;
+    top:50%;
+    padding: 12px;
+    text-align: center;
+    position:absolute;
 }
